test/Parse/optional_lvalues.code
// RUN: %target-typecheck-verify-language

struct S {
  var x: Int = 0
  immutable y: Int = 0 // expected-note 4 {{change 'immutable' to 'var' to make it mutable}} {{3-6=var}} {{3-6=var}} {{3-6=var}} {{3-6=var}}

  init() {}
}

struct T {
  var mutS: S? = nil
  immutable immS: S? = nil // expected-note 10 {{change 'immutable' to 'var' to make it mutable}} {{3-6=var}} {{3-6=var}} {{3-6=var}} {{3-6=var}} {{3-6=var}} {{3-6=var}} {{3-6=var}} {{3-6=var}} {{3-6=var}} {{3-6=var}}

  init() {}
}

var mutT: T?
immutable immT: T? = nil  // expected-note 4 {{change 'immutable' to 'var' to make it mutable}} {{1-4=var}} {{1-4=var}} {{1-4=var}} {{1-4=var}}

immutable mutTPayload = mutT!

mutT! = T()
mutT!.mutS = S()
mutT!.mutS! = S()
mutT!.mutS!.x = 0
mutT!.mutS!.y = 0 // expected-error{{cannot assign to property: 'y' is a 'immutable' constant}}
mutT!.immS = S() // expected-error{{cannot assign to property: 'immS' is a 'immutable' constant}}
mutT!.immS! = S() // expected-error{{cannot assign through '!': 'immS' is a 'immutable' constant}}
mutT!.immS!.x = 0 // expected-error{{cannot assign to property: 'immS' is a 'immutable' constant}}
mutT!.immS!.y = 0 // expected-error{{cannot assign to property: 'y' is a 'immutable' constant}}

immT! = T() // expected-error{{cannot assign through '!': 'immT' is a 'immutable' constant}}
immT!.mutS = S() // expected-error{{cannot assign to property: 'immT' is a 'immutable' constant}}
immT!.mutS! = S() // expected-error{{cannot assign through '!': 'immT' is a 'immutable' constant}}
immT!.mutS!.x = 0 // expected-error{{cannot assign to property: 'immT' is a 'immutable' constant}}
immT!.mutS!.y = 0 // expected-error{{cannot assign to property: 'y' is a 'immutable' constant}}
immT!.immS = S() // expected-error{{cannot assign to property: 'immS' is a 'immutable' constant}}
immT!.immS! = S() // expected-error{{cannot assign through '!': 'immS' is a 'immutable' constant}}
immT!.immS!.x = 0 // expected-error{{cannot assign to property: 'immS' is a 'immutable' constant}}
immT!.immS!.y = 0 // expected-error{{cannot assign to property: 'y' is a 'immutable' constant}}

var mutIUO: T! = nil
immutable immIUO: T! = nil // expected-note 2 {{change 'immutable' to 'var' to make it mutable}} {{1-4=var}} {{1-4=var}}

mutIUO!.mutS = S()
mutIUO!.immS = S() // expected-error{{cannot assign to property: 'immS' is a 'immutable' constant}}
immIUO!.mutS = S() // expected-error{{cannot assign to property: 'immIUO' is a 'immutable' constant}}
immIUO!.immS = S() // expected-error{{cannot assign to property: 'immS' is a 'immutable' constant}}

mutIUO.mutS = S()
mutIUO.immS = S() // expected-error{{cannot assign to property: 'immS' is a 'immutable' constant}}
immIUO.mutS = S() // expected-error{{cannot assign to property: 'immIUO' is a 'immutable' constant}}
immIUO.immS = S() // expected-error{{cannot assign to property: 'immS' is a 'immutable' constant}}

fn foo(x: Int) {}

var nonOptional: S = S()
_ = nonOptional! // expected-error{{cannot force unwrap value of non-optional type 'S'}} {{16-17=}}
_ = nonOptional!.x // expected-error{{cannot force unwrap value of non-optional type 'S'}} {{16-17=}}

class C {}
class D: C {}

immutable c = C()
immutable d = (c as! D)! // expected-error{{cannot force unwrap value of non-optional type 'D'}} {{18-19=}}
